# project-velour

./: .gitignore  Cargo.toml  README.md
assets/ships/: License.txt
assets/ships/Dispatcher/glTF/: Dispatcher.gltf
assets/ships/Insurgent/glTF/: Insurgent.gltf
assets/ships/Striker/glTF/: Striker.gltf
src/: camera.rs  game.rs  main.rs  menu.rs  parts.rs  player.rs  ship.rs  splash_page.rs
src/parts/: custom_button.rs
