[package]
authors = ["Hailey Alfaro"]
description = "Keyboard controlled rail shooter flight game"
edition = "2021"
include = ["/assets", "/src"]
name = "project-velour"
version = "0.2.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
# bevy_asset = "0.8.1"
bevy_rapier3d = "0.19.0"
# bevy_render = "0.8.1"
# bevy_utils = "0.8.1"
rapier3d = "*"
